- Add common code to support for cmake based ports. - Update devel/cmake to 2.6.0 (also fix ports/123092) - Use the new CMAKE build framework in all ports using cmake
Approved by:	portmgr (pav)

--- a/astro/stellarium/Makefile
+++ b/astro/stellarium/Makefile
@@ -19,7 +19,6 @@ LIB_DEPENDS=	boost_thread.4:${PORTSDIR}/devel/boost \
 		jpeg.9:${PORTSDIR}/graphics/jpeg \
 		png.5:${PORTSDIR}/graphics/png \
 		freetype:${PORTSDIR}/print/freetype2
-BUILD_DEPENDS=	cmake:${PORTSDIR}/devel/cmake
 
 USE_QT_VER=	4
 QT_COMPONENTS=	qmake moc gui rcc uic opengl
@@ -27,17 +26,10 @@ USE_GETTEXT=	yes
 USE_GL=		yes
 USE_SDL=	sdl mixer
 USE_GMAKE=	yes
-CMAKE_ENV=	QMAKESPEC=${QMAKESPEC}
-CMAKE_ARGS=	-DCMAKE_BUILD_TYPE:STRING=Release \
-		-DCMAKE_C_COMPILER:STRING='${CC}' \
-		-DCMAKE_C_FLAGS:STRING="${CFLAGS} ${PTHREAD_CFLAGS}" \
-		-DCMAKE_CXX_COMPILER:STRING=${CXX} \
-		-DCMAKE_CXX_FLAGS:STRING="${CXXFLAGS} ${PTHREAD_CFLAGS}" \
-		-DCMAKE_EXE_LINKER_FLAGS:STRING="${PTHREAD_LIBS}" \
-		-DCMAKE_THREAD_LIBS:STRING="${PTHREAD_LIBS}" \
-		-DCMAKE_USE_PTHREADS:BOOL=ON \
-		-DCMAKE_INSTALL_PREFIX=${PREFIX} \
-		-DFreeType2_INCLUDE_DIR=${LOCALBASE}/include/freetype2 \
+USE_CMAKE=	yes
+CMAKE_USE_PTHREAD=	yes
+CMAKE_ENV+=	QMAKESPEC=${QMAKESPEC}
+CMAKE_ARGS+=	-DFreeType2_INCLUDE_DIR=${LOCALBASE}/include/freetype2 \
 		-DQT_QMAKE_EXECUTABLE=${QMAKE}
 
 PORTDOCS=	AUTHORS ChangeLog NEWS README TODO
@@ -55,10 +47,6 @@ post-patch:
 	@${FIND} ${WRKSRC} -type f -print0 | \
 		${XARGS} -0 ${REINPLACE_CMD} -i '' -e 's/fixx11h.h/fixx11qt4h.h/'
 	@${MV} ${WRKSRC}/src/stelutils/fixx11h.h ${WRKSRC}/src/stelutils/fixx11qt4h.h
-
-do-configure:
-	@(cd ${WRKSRC}; \
-	${CMAKE_ENV} ${LOCALBASE}/bin/cmake ${CMAKE_ARGS} ${PATCH_WRKSRC})
 
 post-install:
 .if !defined(NOPORTDOCS)
