--- a/devel/cmake/Makefile
+++ b/devel/cmake/Makefile
@@ -6,7 +6,7 @@
 #
 
 PORTNAME=	cmake
-PORTVERSION=	2.4.8
+PORTVERSION=	2.6.0
 CATEGORIES=	devel
 MASTER_SITES=	http://www.cmake.org/files/v${PORTVERSION:C/\.[[:digit:]]+$//}/ \
 		${MASTER_SITE_LOCAL}
@@ -21,7 +21,15 @@ CONFIGURE_ARGS=	--prefix=${PREFIX} \
 		--docdir=${DOCSDIR:S|^${PREFIX}||}
 CONFIGURE_ENV=	MAKE=make
 
-MAN1=		ccmake.1 cmake.1 ctest.1
+MAN1=		ccmake.1 \
+		cmake.1 \
+		cmakecommands.1 \
+		cmakecompat.1 \
+		cmakemodules.1 \
+		cmakeprops.1 \
+		cmakevars.1 \
+		cpack.1 \
+		ctest.1
 
 post-patch:
 	@${GREP} -rl '/usr/X11R6' ${WRKSRC}/Modules ${WRKSRC}/Tests | \
