--- a/games/ksudoku/Makefile
+++ b/games/ksudoku/Makefile
@@ -14,20 +14,10 @@ MASTER_SITE_SUBDIR=	${PORTNAME}
 MAINTAINER=	freebsd@chillt.de
 COMMENT=	A Sudoku generator and solver for KDE
 
-BUILD_DEPENDS=	cmake:${PORTSDIR}/devel/cmake
-
-CMAKE_ARGS=	-DCMAKE_C_COMPILER:STRING="${CC}" \
-		-DCMAKE_CXX_COMPILER:STRING="${CXX}" \
-		-DCMAKE_CXX_FLAGS:STRING="${CXXFLAGS} ${PTHREAD_CFLAGS}" \
-		-DCMAKE_EXE_LINKER_FLAGS:STRING="${PTHREAD_LIBS}" \
-		-DCMAKE_INSTALL_PREFIX:PATH=${PREFIX}
-
 USE_KDELIBS_VER=3
 USE_GMAKE=	yes
 USE_GL=		yes
-
-do-configure:
-	@cd ${WRKSRC} && \
-		${LOCALBASE}/bin/cmake ${CMAKE_ARGS}
+USE_CMAKE=	yes
+CMAKE_USE_PTHREAD=	yes
 
 .include <bsd.port.mk>
