--- a/math/vtk-python/Makefile
+++ b/math/vtk-python/Makefile
@@ -33,6 +33,15 @@ LINKERFLAGS=	-L${PREFIX}/lib	# to link vtkpython to vtk libs
 CMAKE_DEFS=	-DVTK_WRAP_PYTHON:BOOL=ON \
 		-DPYTHON_INCLUDE_PATH:PATH=${PYTHON_INCLUDEDIR} \
 		-DPYTHON_LIBRARY:FILEPATH=${PYTHON_LIBDIR}/config/lib${PYTHON_VERSION}.a \
+		-DOPENGL_INCLUDE_DIR:PATH=${LOCALBASE}/include \
+		-DZLIB_LIBRARY:PATH=/usr/lib/libz.so \
+		-DZLIB_INCLUDE_DIR:PATH=/usr/include \
+		-DJPEG_LIBRARY:PATH=${LOCALBASE}/lib/libjpeg.so \
+		-DJPEG_INCLUDE_DIR:PATH=${LOCALBASE}/include \
+		-DPNG_LIBRARY:PATH=${LOCALBASE}/lib/libpng.so \
+		-DPNG_INCLUDE_DIR:PATH=${LOCALBASE}/include \
+		-DTIFF_LIBRARY:PATH=${LOCALBASE}/lib/libtiff.so \
+		-DTIFF_INCLUDE_DIR:PATH=${LOCALBASE}/include \
 		-DTCL_INCLUDE_PATH:PATH=${TCL_INCLUDE_DIR} \
 		-DTK_INCLUDE_PATH:PATH=${TK_INCLUDE_DIR} \
 		-DEXPAT_LIBRARY:PATH=${LOCALBASE}/lib/libexpat.so \
