--- a/misc/kbfx/Makefile
+++ b/misc/kbfx/Makefile
@@ -15,23 +15,12 @@ MASTER_SITE_SUBDIR=kbfx
 MAINTAINER=	makc@issp.ac.ru
 COMMENT=	A new K-menu for KDE
 
-BUILD_DEPENDS=	${CMAKE}:${PORTSDIR}/devel/cmake
-
-CMAKE?=		${LOCALBASE}/bin/cmake
-CMAKE_ARGS=	-DCMAKE_BUILD_TYPE:STRING=Release \
-		-DCMAKE_INSTALL_PREFIX:PATH=${PREFIX} \
-		-DCMAKE_C_COMPILER:STRING="${CC}" \
-		-DCMAKE_CXX_COMPILER:STRING="${CXX}" \
-		-DCMAKE_CXX_FLAGS:STRING="${CXXFLAGS}" \
-
+USE_CMAKE=	yes
 USE_BZIP2=	yes
 USE_GETTEXT=	yes
 USE_KDELIBS_VER=3
 USE_LDCONFIG=	yes
 INSTALLS_ICONS=	yes
 USE_GCC=	3.4+
-
-do-configure:
-	(cd ${WRKSRC} && ${CMAKE} ${CMAKE_ARGS})
 
 .include <bsd.port.mk>
