--- a/www/khtml2png/Makefile
+++ b/www/khtml2png/Makefile
@@ -14,17 +14,8 @@ MASTER_SITE_SUBDIR=	${PORTNAME}
 MAINTAINER=	rafan@FreeBSD.org
 COMMENT=	Command line program to create screenshots of webpages
 
-BUILD_DEPENDS=	cmake:${PORTSDIR}/devel/cmake
-
 USE_KDELIBS_VER=	3
-
-CMAKE?=		${LOCALBASE}/bin/cmake
-
-CMAKE_ARGS=	-DCMAKE_BUILD_TYPE:STRING=Release \
-		-DCMAKE_C_COMPILER:STRING='${CC}' \
-		-DCMAKE_CXX_COMPILER:STRING=${CXX} \
-		-DCMAKE_CXX_FLAGS:STRING="${CXXFLAGS}" \
-		-DCMAKE_INSTALL_PREFIX=${PREFIX}
+USE_CMAKE=		yes
 
 PLIST_FILES=	bin/khtml2png2
 
@@ -33,9 +24,5 @@ PLIST_FILES=	bin/khtml2png2
 post-patch:
 	@${REINPLACE_CMD} -e 's,QT_QT_LIBRARY,QT_LIBRARIES,g' \
 		${WRKSRC}/CMakeLists.txt
-
-do-configure:
-	@cd ${WRKSRC} && ${CMAKE} ${CMAKE_ARGS} -G KDevelop3 ${WRKSRC} && \
-		${CMAKE} ${CMAKE_ARGS} ${WRKSRC}
 
 .include <bsd.port.post.mk>
