--- a/math/eigen2/Makefile
+++ b/math/eigen2/Makefile
@@ -12,22 +12,11 @@ MASTER_SITES=	http://download.tuxfamily.org/eigen/
 MAINTAINER=	kde@FreeBSD.org
 COMMENT=	Lightweight library for vector and matrix math
 
-BUILD_DEPENDS=	cmake:${PORTSDIR}/devel/cmake
-
-CMAKE?=		${LOCALBASE}/bin/cmake
+USE_CMAKE=	yes
+CMAKE_SOURCE_PATH=	..
 WRKSRC=		${WRKDIR}/${PORTNAME}/build
-MAKE_ENV=	VERBOSE="1"
-CMAKE_ARGS=	-DCMAKE_BUILD_TYPE=DEBUG \
-		-DCMAKE_INSTALL_PREFIX=${PREFIX} \
-		-DCMAKE_C_COMPILER:STRING='${CC}' \
-		-DCMAKE_C_FLAGS:STRING="${CFLAGS}" \
-		-DCMAKE_CXX_COMPILER:STRING=${CXX} \
-		-DCMAKE_CXX_FLAGS:STRING="${CXXFLAGS}"
 
 post-patch:
 	${MKDIR} ${WRKSRC}
-
-do-configure:
-	cd ${WRKSRC}; ${SETENV} ${CONFIGURE_ENV} ${CMAKE} ${CMAKE_ARGS} ..
 
 .include <bsd.port.mk>
