Switch to using GNU make. If PCRE was disabled, it would not build with FreeBSD make.
Noticed by:	Andreas Blaaflaadt

Cc:		andreas@blaafladt.no
Approved by:	maintainer

--- a/net/ngrep/Makefile
+++ b/net/ngrep/Makefile
@@ -18,6 +18,7 @@ COMMENT=	Network grep
 
 WRKSRC=		${WRKDIR}/${PORTNAME}-${PORTVERSION}
 USE_BZIP2=	yes
+USE_GMAKE=	yes
 ALL_TARGET=	ngrep
 GNU_CONFIGURE=	yes
 CONFIGURE_ARGS=	--disable-pcap-restart
