compat5x port can fail to extract if you're root.
	If you are building the misc/compat5x port as root, it can
	fail to extract properly, if your ports dir is not owned
	by root:wheel, but for example by root:src.

This is because the files in the distfile archive have the schg flag set.
That flag is killed btw in the post-extract phase.

PR:		ports/122306
Submitted by:	Dimitry Andric <dimitry@andric.com>

--- a/misc/compat5x/Makefile
+++ b/misc/compat5x/Makefile
@@ -32,6 +32,8 @@ TARGET_DIR=	${PREFIX}/lib/compat
 TARGET32_DIR=	${PREFIX}/lib32/compat
 USE_LDCONFIG=	${TARGET_DIR}
 
+EXTRACT_PRESERVE_OWNERSHIP=	yes	# Files in archive have scfg-flag set
+
 .include <bsd.port.pre.mk>
 
 .if ${OSVERSION} < 600000
