x11/libxcb: message isn't shown sometimes
	When installing x11/libxcb pkg-message may not be shown if
	/usr/obj is used and /usr/obj/usr/ports/x11/libxcb dir
	exist.

PR:		ports/123966
Submitted by:	Anatoly Borodin <anatoly.borodin@gmail.com>

--- a/x11/libxcb/Makefile
+++ b/x11/libxcb/Makefile
@@ -48,7 +48,7 @@ XPROTO_LIBS=	-L${LOCALBASE}/lib
 
 post-install:
 	@${ECHO_MSG} ''
-	@${CAT} pkg-message
+	@${CAT} ${.CURDIR}/pkg-message
 	@${ECHO_MSG} ''
 
 .include <bsd.port.mk>
