--- a/textproc/xmlto/Makefile
+++ b/textproc/xmlto/Makefile
@@ -5,15 +5,14 @@
 # $FreeBSD$
 #
 
-# The following compile-time options are available:
-# WITH_PASSIVETEX	Enable PassiveTex support for DVI/PDF/PS output
-
 PORTNAME=	xmlto
 PORTVERSION=	0.0.20
+PORTREVISION=	1
 CATEGORIES=	textproc
 MASTER_SITES=	http://cyberelk.net/tim/data/xmlto/stable/
+# Master Site is subject to change with 0.0.21 release
 
-MAINTAINER=	ports@FreeBSD.org
+MAINTAINER=	matthias.andree@gmx.de
 COMMENT=	Front-end to an XSL toolchain
 
 BUILD_DEPENDS=	${BASH_CMD}:${PORTSDIR}/shells/bash \
@@ -23,12 +22,7 @@ BUILD_DEPENDS=	${BASH_CMD}:${PORTSDIR}/shells/bash \
 		${XSL_DIR}:${PORTSDIR}/textproc/docbook-xsl
 RUN_DEPENDS=	${BUILD_DEPENDS}
 
-.if defined(WITH_PASSIVETEX) || exists(${PASSIVETEX})
-BUILD_DEPENDS+=	${PASSIVETEX}:${PORTSDIR}/print/passivetex
-PLIST_SUB=	PASSIVETEX=""
-.else
-PLIST_SUB=	PASSIVETEX="@comment "
-.endif
+OPTIONS=	PASSIVETEX "Enable PassiveTeX support for DVI/PS/PDF" OFF
 
 USE_BZIP2=	yes
 GNU_CONFIGURE=	yes
@@ -37,15 +31,30 @@ CONFIGURE_TARGET=	--build=${MACHINE_ARCH}-portbld-freebsd${OSREL}
 
 BASH_CMD=	${LOCALBASE}/bin/bash
 GETOPT_CMD=	${LOCALBASE}/bin/getopt
-PASSIVETEX?=	mktexlsr
 XSL_DIR=	${LOCALBASE}/share/xsl/docbook
 
 MAN1=		xmlif.1 xmlto.1
-DOCS=		AUTHORS NEWS
+PORTDOCS=	AUTHORS COPYING ChangeLog NEWS THANKS
+# these two documentation files do not convey information useful for
+# the FreeBSD port at this time:
+# PORTDOCS+=	FAQ README
+
+.include <bsd.port.pre.mk>
+
+.if defined(WITH_PASSIVETEX)
+BUILD_DEPENDS+=	${LOCALBASE}/share/texmf-local/tex/passivetex/fotex.sty:${PORTSDIR}/print/passivetex
+RUN_DEPENDS+=	${LOCALBASE}/share/texmf-local/tex/passivetex/fotex.sty:${PORTSDIR}/print/passivetex
+PLIST_SUB=	PASSIVETEX=""
+.else
+PLIST_SUB=	PASSIVETEX="@comment "
+.endif
 
 post-patch:
-	@${REINPLACE_CMD} -e 's|-a|-PpR|' \
-	    ${WRKSRC}/format/docbook/man
+.for i in docbook/htmlhelp docbook/xhtml-nochunks docbook/javahelp \
+	docbook/html docbook/html-nochunks docbook/xhtml docbook/fo \
+	docbook/man fo/dvi fo/pdf
+	@${REINPLACE_CMD} -e 's|-a|-PpR|' ${WRKSRC}/format/${i}
+.endfor
 .if !defined(WITH_PASSIVETEX)
 	@${REINPLACE_CMD} -e '/format\/fo\//d' ${WRKSRC}/Makefile.in
 .endif
@@ -57,7 +66,7 @@ post-build:
 .if !defined(NOPORTDOCS)
 post-install:
 	@${MKDIR} ${DOCSDIR}
-	cd ${WRKSRC} && ${INSTALL_DATA} ${DOCS} ${DOCSDIR}
+	cd ${WRKSRC} && ${INSTALL_DATA} ${PORTDOCS} ${DOCSDIR}
 .endif
 
-.include <bsd.port.mk>
+.include <bsd.port.post.mk>
