--- a/textproc/xmlto/files/patch-xmlto.in
+++ b/textproc/xmlto/files/patch-xmlto.in
@@ -1,8 +1,16 @@
---- xmlto.in.orig	Mon Jan  5 09:20:01 2004
-+++ xmlto.in	Mon Jan  5 09:20:32 2004
+--- xmlto.in.orig	2008-01-17 10:39:02.000000000 +0100
++++ xmlto.in	2008-05-25 13:43:48.000000000 +0200
 @@ -1,4 +1,4 @@
 -#!/bin/bash
 +#!@BASH@
  # 
  # @PACKAGE@ - apply an XSL stylesheet to an XML document
  # Copyright (C) 2001, 2002, 2003  Tim Waugh <twaugh@redhat.com>
+@@ -326,6 +326,7 @@
+ # Ask the format script what stylesheet to use.
+ XSLT_PROCESSOR=xsltproc # We only know about xsltproc right now.
+ export XSLT_PROCESSOR
++export USE_BACKEND
+ if [ -z "$STYLESHEET" ]
+ then
+   STYLESHEET="$(${BASH} "$FORMAT" stylesheet)" || exit 1
