--- a/sysutils/Makefile
+++ b/sysutils/Makefile
@@ -503,6 +503,7 @@
     SUBDIR += p5-Sys-Gamin
     SUBDIR += p5-Sys-Hostname-FQDN
     SUBDIR += p5-Sys-Hostname-Long
+    SUBDIR += p5-Sys-Syslog
     SUBDIR += p5-Sys-Utmp
     SUBDIR += p5-Sysadm-Install
     SUBDIR += p5-SyslogScan
