${.CURDIR}/pkg-message -> ${PKGMESSAGE} Noticed by: flz@
PR:		ports/123966
Submitted by:	Anatoly Borodin <anatoly.borodin@gmail.com>

--- a/x11/libxcb/Makefile
+++ b/x11/libxcb/Makefile
@@ -48,7 +48,7 @@ XPROTO_LIBS=	-L${LOCALBASE}/lib
 
 post-install:
 	@${ECHO_MSG} ''
-	@${CAT} ${.CURDIR}/pkg-message
+	@${CAT} ${PKGMESSAGE}
 	@${ECHO_MSG} ''
 
 .include <bsd.port.mk>
