--- a/sysutils/bsdstats/files/300.statistics.in
+++ b/sysutils/bsdstats/files/300.statistics.in
@@ -172,7 +172,7 @@ report_ports () {
 
 	# Make the request	
 	string_length=`echo ${query_string} | wc -m` 
-	string_length=`expr ${string_length} - 1`
+	string_length=$((string_length - 1))
 
 	echo "POST ${url_prefix}/scripts/report_ports.php HTTP/1.0
 Host: ${checkin_server}
